<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_sea2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:iss_auto_cycle="true"
                app:iss_delay="1555"
                app:iss_period="1000"
                app:iss_text_align="CENTER" />

        </RelativeLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/dark_sea"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.5dp"
                    android:text="@string/weapon_informations"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fireR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:padding="1dp"
                        android:text="@string/fire_rate"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fireRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/fireR"
                        android:text="@string/empty"
                        android:textColor="@color/light_grey"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/MagSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/fireRate"
                        android:padding="1dp"
                        android:text="@string/magSize"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/magSiz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/MagSize"
                        android:paddingStart="2dp"
                        android:text="@string/empty"
                        android:textColor="@color/light_grey"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/runSpeedMultiplier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fireR"
                        android:layout_marginStart="5dp"
                        android:padding="1dp"
                        android:text="@string/runSpeedMultiplier"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/runSpeedM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fireRate"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/fireR"
                        android:paddingStart="5dp"
                        android:text="@string/empty"
                        android:textColor="@color/light_grey"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/equipTimeSec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/magSiz"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/fireRate"
                        android:padding="1dp"
                        android:text="@string/equipTimeSec"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/equipTimeSecText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/magSiz"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/MagSize"
                        android:paddingStart="2dp"
                        android:text="@string/empty"
                        android:textColor="@color/light_grey"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/firstBulletAcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/runSpeedMultiplier"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:padding="1dp"
                        android:text="@string/firstBulletAccuracy"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/firstBulletAc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/runSpeedMultiplier"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/fireR"
                        android:paddingStart="35dp"
                        android:text="@string/empty"
                        android:textColor="@color/light_grey"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/dark_sea"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.5dp"
                    android:text="@string/chromas"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chromaRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:padding="3dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>