<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weaponryCardView"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    android:background="@color/light_grey"
    android:elevation="15dp"
    android:maxHeight="350dp"
    android:minHeight="150dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:rippleColor="@color/lavender">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/weaponImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/weapon_image"
                android:padding="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher_background" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/weaponryPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toStartOf="@+id/currencyIcon"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/currencyIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@color/black"
                app:shapeAppearanceOverlay="@style/CircularImageViewStyle" />

        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:backgroundTint="@color/black" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/weaponryName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="2"
            android:padding="2dp"
            android:text="@string/empty"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>